Refactor core logic to allow multiple ScheduledLightStates
Prepare for advanced group scheduling based on scenes.
Reading scene definitions are not supported for Home Assistant.