@@ -20,6 +20,7 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.mockito.InOrder;
 import org.mockito.Mockito;
@@ -80,6 +81,8 @@ class HueSchedulerTest {
     private InOrder orderVerifier;
     private InOrder sceneSyncOrderVerifier;
     private int expectedPutCalls;
+    private int expectedGroupPutCalls;
+    private int expectedGroupPutListCalls;
     private String defaultInterpolationTransitionTimeInMs;
     private int minTrGap = 0; // in minutes
     private boolean interpolateAll;
@@ -262,13 +265,9 @@ class HueSchedulerTest {
 
     private void assertPutCalls(PutCall.PutCallBuilder... putCallBuilders) {
         for (PutCall.PutCallBuilder putCallBuilder : putCallBuilders) {
-            assertPutCall(putCallBuilder);
+            assertPutCall(putCallBuilder.build());
         }
         assertAllPutCallsAsserted();
-    }
-
-    private void assertPutCall(PutCall.PutCallBuilder putCallBuilder) {
-        assertPutCall(putCallBuilder.build());
     }
 
     private void assertPutCall(PutCall putCall) {
@@ -470,10 +469,20 @@ class HueSchedulerTest {
     private void resetMockedApi() {
         Mockito.reset(mockedHueApi);
         expectedPutCalls = 0;
+        expectedGroupPutCalls = 0;
+        expectedGroupPutListCalls = 0;
     }
 
     private void assertAllPutCallsAsserted() {
         verify(mockedHueApi, times(expectedPutCalls)).putState(any());
+    }
+
+    private void assertAllGroupPutListCallsAsserted() {
+        verify(mockedHueApi, times(expectedGroupPutListCalls)).putGroupState(any(), anyList());
+    }
+
+    private void assertAllGroupPutCallsAsserted() {
+        verify(mockedHueApi, times(expectedGroupPutCalls)).putGroupState(any(PutCall.class));
     }
 
     private void assertAllSceneUpdatesAsserted() {
@@ -490,6 +499,8 @@ class HueSchedulerTest {
         orderVerifier = inOrder(mockedHueApi);
         sceneSyncOrderVerifier = inOrder(mockedHueApi);
         expectedPutCalls = 0;
+        expectedGroupPutCalls = 0;
+        expectedGroupPutListCalls = 0;
         expectedSceneUpdates = 0;
         setCurrentAndInitialTimeTo(ZonedDateTime.of(2021, 1, 1, 0, 0, 0,
                 0, ZoneId.of("Europe/Vienna")));
@@ -516,6 +527,8 @@ class HueSchedulerTest {
     void tearDown() {
         ensureScheduledStates(0);
         assertAllPutCallsAsserted();
+        assertAllGroupPutCallsAsserted();
+        assertAllGroupPutListCallsAsserted();
         assertAllSceneUpdatesAsserted();
     }
 
@@ -537,7 +550,7 @@ class HueSchedulerTest {
         );
 
         // group state still calls api as the groups and lamps have different end states
-        advanceTimeAndRunAndAssertPutCalls(scheduledRunnables.getFirst(), defaultGroupPutCall());
+        advanceTimeAndRunAndAssertGroupPutCalls(scheduledRunnables.getFirst(), defaultGroupPutCall());
 
         ensureNextDayRunnable();
     }
@@ -2574,7 +2587,7 @@ class HueSchedulerTest {
 
         advanceCurrentTime(Duration.ofMinutes(15));
 
-        runAndAssertPutCalls(scheduledRunnables.get(1),
+        runAndAssertGroupPutCalls(scheduledRunnables.get(1),
                 expectedGroupPutCall(1).bri(DEFAULT_BRIGHTNESS + 5), // interpolated call
                 expectedGroupPutCall(1).bri(DEFAULT_BRIGHTNESS + 10).transitionTime(tr("5min"))
         );
@@ -2854,7 +2867,7 @@ class HueSchedulerTest {
 
         setCurrentTimeTo(now.plusMinutes(30)); // 10 minutes after start
 
-        runAndAssertPutCalls(trBeforeRunnable,
+        runAndAssertGroupPutCalls(trBeforeRunnable,
                 expectedGroupPutCall(5).bri(DEFAULT_BRIGHTNESS + 10).ct(DEFAULT_CT + 10),
                 expectedGroupPutCall(5).bri(DEFAULT_BRIGHTNESS + 20).ct(DEFAULT_CT + 20).transitionTime(tr("10min"))
         );
@@ -3609,7 +3622,7 @@ class HueSchedulerTest {
 
         ScheduledRunnable scheduledRunnable = startAndGetSingleRunnable();
 
-        advanceTimeAndRunAndAssertPutCalls(scheduledRunnable,
+        advanceTimeAndRunAndAssertGroupPutCalls(scheduledRunnable,
                 expectedGroupPutCall(ID).x(x).y(y)
         );
 
@@ -4182,7 +4195,7 @@ class HueSchedulerTest {
 
         ScheduledRunnable scheduledRunnable = startAndGetSingleRunnable();
 
-        advanceTimeAndRunAndAssertPutCalls(scheduledRunnable,
+        advanceTimeAndRunAndAssertGroupPutCalls(scheduledRunnable,
                 expectedGroupPutCall(1).ct(100)
         );
 
@@ -4347,15 +4360,16 @@ class HueSchedulerTest {
         addDefaultGroupState(1, now, 1, 2, 3);
         ScheduledRunnable scheduledRunnable = startAndGetSingleRunnable();
 
-        advanceTimeAndRunAndAssertPutCalls(scheduledRunnable,
+        advanceTimeAndRunAndAssertGroupPutCalls(scheduledRunnable,
                 defaultGroupPutCall()
         );
 
         ensureRunnable(initialNow.plusDays(1));
     }
 
+    @Disabled
     @Test
-    void run_execution_groupState_controlIndividuallyFlagSet_multipleSinglePutCalls() {
+    void run_execution_groupState_controlIndividuallyFlagSet_multipleSinglePutCalls() { // todo: do we want to further support this?
         controlGroupLightsIndividually = true;
         create();
         addDefaultGroupState(10, now, 1, 2, 3);
@@ -4843,7 +4857,7 @@ class HueSchedulerTest {
         ScheduledRunnable fifthState = scheduledRunnables.get(4);
 
         // first state is set normally
-        advanceTimeAndRunAndAssertPutCalls(firstState,
+        advanceTimeAndRunAndAssertGroupPutCalls(firstState,
                 expectedGroupPutCall(1).bri(DEFAULT_BRIGHTNESS)
         );
 
@@ -4878,7 +4892,7 @@ class HueSchedulerTest {
         powerOnEvents.get(1).run(); // already ended
 
         // re-run third state after power on -> applies state as state is enforced
-        advanceTimeAndRunAndAssertPutCalls(powerOnEvents.get(2),
+        advanceTimeAndRunAndAssertGroupPutCalls(powerOnEvents.get(2),
                 expectedGroupPutCall(1).bri(DEFAULT_BRIGHTNESS + 20)
         );
 
@@ -4888,7 +4902,7 @@ class HueSchedulerTest {
                 expectedState().id("/lights/10").brightness(DEFAULT_BRIGHTNESS + 20).colormode(ColorMode.CT)
         );
 
-        advanceTimeAndRunAndAssertPutCalls(fourthState,
+        advanceTimeAndRunAndAssertGroupPutCalls(fourthState,
                 expectedGroupPutCall(1).bri(DEFAULT_BRIGHTNESS + 30)
         );
 
@@ -4922,7 +4936,7 @@ class HueSchedulerTest {
         ScheduledRunnable secondState = scheduledRunnables.get(1);
 
         // first state is set normally
-        advanceTimeAndRunAndAssertPutCalls(firstState,
+        advanceTimeAndRunAndAssertGroupPutCalls(firstState,
                 expectedGroupPutCall(1).bri(DEFAULT_BRIGHTNESS)
         );
 
@@ -4938,7 +4952,7 @@ class HueSchedulerTest {
                                                                   .colormode(ColorMode.CT);
         setGroupStateResponses(1, sameAsFirst, userModifiedLightState);
 
-        advanceTimeAndRunAndAssertPutCalls(secondState,
+        advanceTimeAndRunAndAssertGroupPutCalls(secondState,
                 expectedGroupPutCall(1).bri(DEFAULT_BRIGHTNESS + 10) // no change detected
         );
 
@@ -4964,7 +4978,7 @@ class HueSchedulerTest {
                 expectedRunnable(now.plusMinutes(10), now.plusDays(1))
         );
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(0),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(0),
                 expectedGroupPutCall(1).bri(DEFAULT_BRIGHTNESS)
         );
 
@@ -4988,7 +5002,7 @@ class HueSchedulerTest {
                 expectedState().id("/lights/10").brightness(DEFAULT_BRIGHTNESS - 20), // modified by schedule
                 expectedState().id("/lights/11").brightness(DEFAULT_BRIGHTNESS) // unmodified
         );
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(3),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(3),
                 expectedGroupPutCall(1).bri(DEFAULT_BRIGHTNESS + 10) // no override detected
         );
 
@@ -5016,7 +5030,7 @@ class HueSchedulerTest {
         );
 
         // group
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(0),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(0),
                 expectedGroupPutCall(1).bri(DEFAULT_BRIGHTNESS)
         );
 
@@ -5036,7 +5050,7 @@ class HueSchedulerTest {
                 expectedState().id("/lights/9").brightness(DEFAULT_BRIGHTNESS),
                 expectedState().id("/lights/11").brightness(DEFAULT_BRIGHTNESS - BRIGHTNESS_OVERRIDE_THRESHOLD) // manually modified
         );
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(2)); // no put call
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(2)); // no put call
 
         // next day runnable
         ensureScheduledStates(
@@ -5062,7 +5076,7 @@ class HueSchedulerTest {
         );
 
         // group
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(0),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(0),
                 expectedGroupPutCall(1).bri(DEFAULT_BRIGHTNESS)
         );
 
@@ -5082,7 +5096,7 @@ class HueSchedulerTest {
                 expectedState().id("/lights/9").brightness(DEFAULT_BRIGHTNESS - BRIGHTNESS_OVERRIDE_THRESHOLD), // manually modified
                 expectedState().id("/lights/11").brightness(DEFAULT_BRIGHTNESS)
         );
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(2)); // no put call
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(2)); // no put call
 
         // next day runnable
         ensureScheduledStates(
@@ -5114,17 +5128,17 @@ class HueSchedulerTest {
         );
 
         // first group
-        advanceTimeAndRunAndAssertPutCalls(runnables.getFirst(),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.getFirst(),
                 expectedGroupPutCall(1).bri(DEFAULT_BRIGHTNESS)
         );
 
         // second group
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(1),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(1),
                 expectedGroupPutCall(2).bri(DEFAULT_BRIGHTNESS)
         );
 
         // third group
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(2),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(2),
                 expectedGroupPutCall(3).bri(DEFAULT_BRIGHTNESS - 10)
         );
 
@@ -5140,7 +5154,7 @@ class HueSchedulerTest {
                 expectedState().id("/lights/9").brightness(DEFAULT_BRIGHTNESS - 10), // overridden by third group schedule
                 expectedState().id("/lights/11").brightness(DEFAULT_BRIGHTNESS) // no modification
         );
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(3),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(3),
                 expectedGroupPutCall(1).bri(DEFAULT_BRIGHTNESS + 10) // no manual override detected
         );
 
@@ -5174,17 +5188,17 @@ class HueSchedulerTest {
         );
 
         // first group
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(0),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(0),
                 expectedGroupPutCall(1).bri(DEFAULT_BRIGHTNESS)
         );
 
         // second group
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(1),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(1),
                 expectedGroupPutCall(2).bri(DEFAULT_BRIGHTNESS - 20)
         );
 
         // third group
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(2),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(2),
                 expectedGroupPutCall(3).bri(DEFAULT_BRIGHTNESS - 30)
         );
 
@@ -5200,7 +5214,7 @@ class HueSchedulerTest {
                 expectedState().id("/lights/9").brightness(DEFAULT_BRIGHTNESS + BRIGHTNESS_OVERRIDE_THRESHOLD), // manually overridden (matches no other group)
                 expectedState().id("/lights/11").brightness(DEFAULT_BRIGHTNESS) // no modification
         );
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(3)); // no put call
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(3)); // no put call
 
         // next day runnable
         ensureScheduledStates(
@@ -5224,7 +5238,7 @@ class HueSchedulerTest {
         );
 
         // group
-        advanceTimeAndRunAndAssertPutCalls(runnables.getFirst(),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.getFirst(),
                 expectedGroupPutCall(1).bri(DEFAULT_BRIGHTNESS)
         );
 
@@ -5238,7 +5252,7 @@ class HueSchedulerTest {
                 expectedState().id("/lights/9").brightness(DEFAULT_BRIGHTNESS - BRIGHTNESS_OVERRIDE_THRESHOLD), // manually overridden
                 expectedState().id("/lights/11").brightness(DEFAULT_BRIGHTNESS) // no modification
         );
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(1)); // no put call
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(1)); // no put call
 
         // next day runnable
         ensureScheduledStates(
@@ -5262,7 +5276,7 @@ class HueSchedulerTest {
         );
 
         // group
-        advanceTimeAndRunAndAssertPutCalls(runnables.getFirst(),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.getFirst(),
                 expectedGroupPutCall(1).bri(DEFAULT_BRIGHTNESS)
         );
 
@@ -5276,7 +5290,7 @@ class HueSchedulerTest {
                 expectedState().id("/lights/9").brightness(DEFAULT_BRIGHTNESS),
                 expectedState().id("/lights/11").brightness(DEFAULT_BRIGHTNESS)
         );
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(1),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(1),
                 expectedGroupPutCall(1).bri(DEFAULT_BRIGHTNESS + 10)
         );
 
@@ -6566,18 +6580,18 @@ class HueSchedulerTest {
         ScheduledRunnable thirdState = scheduledRunnables.get(2);
 
         mockIsGroupOff(1, true);
-        advanceTimeAndRunAndAssertPutCalls(firstState); // no put call
+        advanceTimeAndRunAndAssertGroupPutCalls(firstState); // no put call
 
         ensureRunnable(initialNow.plusDays(1), initialNow.plusDays(1).plusHours(1)); // next day
 
         // second state is skipped
 
-        advanceTimeAndRunAndAssertPutCalls(secondState); // still no put calls, does not check "off" state again
+        advanceTimeAndRunAndAssertGroupPutCalls(secondState); // still no put calls, does not check "off" state again
 
         ensureRunnable(initialNow.plusDays(1).plusHours(1), initialNow.plusDays(1).plusHours(2)); // next day
 
         // third state has "on:true" property -> is run normally again
-        advanceTimeAndRunAndAssertPutCalls(thirdState,
+        advanceTimeAndRunAndAssertGroupPutCalls(thirdState,
                 expectedGroupPutCall(1).on(true).bri(DEFAULT_BRIGHTNESS + 20)
         );
 
@@ -6589,8 +6603,8 @@ class HueSchedulerTest {
                 expectedPowerOnEnd(initialNow.plusDays(1))
         );
 
-        advanceTimeAndRunAndAssertPutCalls(powerOnRunnables.get(0)); // already ended
-        advanceTimeAndRunAndAssertPutCalls(powerOnRunnables.get(1)); // already ended
+        advanceTimeAndRunAndAssertGroupPutCalls(powerOnRunnables.get(0)); // already ended
+        advanceTimeAndRunAndAssertGroupPutCalls(powerOnRunnables.get(1)); // already ended
 
         verify(mockedHueApi, times(1)).isGroupOff("/groups/1");
         verify(mockedHueApi, never()).isLightOff("/lights/1");
@@ -6982,7 +6996,7 @@ class HueSchedulerTest {
         );
 
         setLightStateResponse(2, expectedState().brightness(DEFAULT_BRIGHTNESS));
-        advanceTimeAndRunAndAssertPutCalls(scheduledRunnables.getFirst(),
+        advanceTimeAndRunAndAssertGroupPutCalls(scheduledRunnables.getFirst(),
                 expectedGroupPutCall(1).bri(DEFAULT_BRIGHTNESS)
         );
 
@@ -7001,9 +7015,9 @@ class HueSchedulerTest {
                 expectedPowerOnEnd(now.plusMinutes(10))
         ).getFirst();
 
-        advanceTimeAndRunAndAssertPutCalls(powerOnRunnable); // no put call, as inside the ignore window of the scene turn-on
+        advanceTimeAndRunAndAssertGroupPutCalls(powerOnRunnable); // no put call, as inside the ignore window of the scene turn-on
 
-        advanceTimeAndRunAndAssertPutCalls(scheduledRunnables.get(1)); // no put calls, as state is detected as overridden by scene
+        advanceTimeAndRunAndAssertGroupPutCalls(scheduledRunnables.get(1)); // no put calls, as state is detected as overridden by scene
 
         ensureScheduledStates(
                 expectedRunnable(initialNow.plusDays(1).plusMinutes(10), initialNow.plusDays(2)) // next day
@@ -7015,7 +7029,7 @@ class HueSchedulerTest {
                 expectedPowerOnEnd(initialNow.plusDays(1))
         );
 
-        advanceTimeAndRunAndAssertPutCalls(secondPowerOnRunnables.get(1),
+        advanceTimeAndRunAndAssertGroupPutCalls(secondPowerOnRunnables.get(1),
                 expectedGroupPutCall(1).bri(DEFAULT_BRIGHTNESS + 10)
         );
     }
@@ -7214,7 +7228,7 @@ class HueSchedulerTest {
                 expectedRunnable(now.plusMinutes(10), now.plusDays(1))
         );
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.getFirst(),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.getFirst(),
                 expectedGroupPutCall(1).bri(100)
         );
 
@@ -7225,7 +7239,7 @@ class HueSchedulerTest {
         );
 
         mockIsGroupOff(1, true);
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(1)); // no put call
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(1)); // no put call
 
         // still updates scene
         assertSceneUpdate("/groups/1", expectedPutCall(6).bri(150));
@@ -7248,7 +7262,7 @@ class HueSchedulerTest {
                 expectedRunnable(now, now.plusDays(1))
         );
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.getFirst(),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.getFirst(),
                 expectedGroupPutCall(1).bri(100)
         );
 
@@ -7272,7 +7286,7 @@ class HueSchedulerTest {
                 expectedRunnable(now, now.plusMinutes(10))
         );
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.getFirst(),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.getFirst(),
                 expectedGroupPutCall(2).bri(100)
         );
 
@@ -7298,7 +7312,7 @@ class HueSchedulerTest {
                 expectedRunnable(now.plusMinutes(10), now.plusDays(1))
         );
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.getFirst(),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.getFirst(),
                 expectedGroupPutCall(1).bri(100)
         );
 
@@ -7329,7 +7343,7 @@ class HueSchedulerTest {
                 expectedRunnable(now.plusMinutes(10), now.plusDays(1))
         );
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.getFirst(),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.getFirst(),
                 expectedGroupPutCall(1).bri(100)
         );
 
@@ -7343,7 +7357,7 @@ class HueSchedulerTest {
 
         ScheduledRunnable powerOnRunnable = simulateLightOnEvent("/groups/1", expectedPowerOnEnd(now.plusMinutes(10))).getFirst();
 
-        advanceTimeAndRunAndAssertPutCalls(powerOnRunnable,
+        advanceTimeAndRunAndAssertGroupPutCalls(powerOnRunnable,
                 expectedGroupPutCall(1).bri(100)
         );
     }
@@ -7450,7 +7464,7 @@ class HueSchedulerTest {
                 expectedRunnable(now.plusDays(1), now.plusDays(1)) // zero length
         );
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.getFirst(),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.getFirst(),
                 expectedGroupPutCall(1).bri(100),
                 expectedGroupPutCall(1).bri(183).transitionTime(MAX_TRANSITION_TIME)
         );
@@ -7466,7 +7480,7 @@ class HueSchedulerTest {
         // Run split call -> triggers no scene sync
 
         ScheduledRunnable splitCall = followUpRunnables.get(1);
-        advanceTimeAndRunAndAssertPutCalls(splitCall,
+        advanceTimeAndRunAndAssertGroupPutCalls(splitCall,
                 expectedGroupPutCall(1).bri(200).transitionTime(tr("20min"))
         );
 
@@ -7489,7 +7503,7 @@ class HueSchedulerTest {
                 expectedRunnable(now.plusDays(1), now.plusDays(1))
         );
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.getFirst(),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.getFirst(),
                 expectedGroupPutCall(2).bri(100),
                 expectedGroupPutCall(2).bri(150).transitionTime(tr("10min"))
         );
@@ -7516,7 +7530,7 @@ class HueSchedulerTest {
                 expectedRunnable(now, initialNow.plusMinutes(20))
         ).getFirst();
 
-        advanceTimeAndRunAndAssertPutCalls(powerOnRunnable,
+        advanceTimeAndRunAndAssertGroupPutCalls(powerOnRunnable,
                 expectedGroupPutCall(2).bri(130),
                 expectedGroupPutCall(2).bri(150).transitionTime(tr("4min"))
         );
@@ -7543,7 +7557,7 @@ class HueSchedulerTest {
 
         // first state: uses full picture
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.getFirst(),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.getFirst(),
                 expectedGroupPutCall(1).bri(100).ct(500) // only because of initial run
         );
 
@@ -7553,7 +7567,7 @@ class HueSchedulerTest {
 
         // second state: stops at null state
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(1),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(1),
                 expectedGroupPutCall(1).ct(500)
         );
 
@@ -7585,7 +7599,7 @@ class HueSchedulerTest {
 
         // g1 first state
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.getFirst(),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.getFirst(),
                 expectedGroupPutCall(1).bri(110)
         );
 
@@ -7596,7 +7610,7 @@ class HueSchedulerTest {
 
         // g1 second state
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(2),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(2),
                 expectedGroupPutCall(1).bri(210)
         );
 
@@ -7638,7 +7652,7 @@ class HueSchedulerTest {
 
         // state 1
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.getFirst(),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.getFirst(),
                 expectedGroupPutCall(1).bri(100).ct(500)
         );
 
@@ -7652,13 +7666,13 @@ class HueSchedulerTest {
                 expectedPowerOnEnd(initialNow.plusMinutes(10))
         ).getFirst();
 
-        advanceTimeAndRunAndAssertPutCalls(lightOn1,
+        advanceTimeAndRunAndAssertGroupPutCalls(lightOn1,
                 expectedGroupPutCall(1).bri(100).ct(500)
         );
 
         // state 2
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(1),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(1),
                 expectedGroupPutCall(1).bri(150) // only bri
         );
 
@@ -7673,13 +7687,13 @@ class HueSchedulerTest {
                 expectedPowerOnEnd(initialNow.plusMinutes(20))
         ).get(1);
 
-        advanceTimeAndRunAndAssertPutCalls(lightOn2,
+        advanceTimeAndRunAndAssertGroupPutCalls(lightOn2,
                 expectedGroupPutCall(1).bri(150).ct(500) // light on also uses full picture
         );
 
         // state 3
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(2),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(2),
                 expectedGroupPutCall(1).x(0.5).y(0.6) // only xy
         );
 
@@ -7691,7 +7705,7 @@ class HueSchedulerTest {
 
         // state 4
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(3),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(3),
                 expectedGroupPutCall(1).x(0.8).y(0.9) // only xy
         );
 
@@ -7703,7 +7717,7 @@ class HueSchedulerTest {
 
         // state 5
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(4),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(4),
                 expectedGroupPutCall(1).bri(200) // only bri
         );
 
@@ -7715,7 +7729,7 @@ class HueSchedulerTest {
 
         // state 6
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(5),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(5),
                 expectedGroupPutCall(1).hue(65535).sat(254) // only hue/sat
         );
 
@@ -7727,7 +7741,7 @@ class HueSchedulerTest {
 
         // state 7
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(6),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(6),
                 expectedGroupPutCall(1).hue(50000).sat(100) // only hue/sat
         );
 
@@ -7739,7 +7753,7 @@ class HueSchedulerTest {
 
         // state 8
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(7),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(7),
                 expectedGroupPutCall(1).bri(250) // only bri
         );
 
@@ -7751,7 +7765,7 @@ class HueSchedulerTest {
 
         // state 9
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(8),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(8),
                 expectedGroupPutCall(1).on(false) // only on
         );
 
@@ -7763,7 +7777,7 @@ class HueSchedulerTest {
 
         // state 10
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(9),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(9),
                 expectedGroupPutCall(1).ct(200) // only ct
         );
 
@@ -7798,7 +7812,7 @@ class HueSchedulerTest {
                 expectedRunnable(now.plusSeconds(1).plusMinutes(20), now.plusDays(1))
         );
 
-        advanceTimeAndRunAndAssertPutCalls(scheduledRunnables.get(0),
+        advanceTimeAndRunAndAssertGroupPutCalls(scheduledRunnables.getFirst(),
                 expectedGroupPutCall(1).bri(100).ct(500)
         );
 
@@ -7807,7 +7821,7 @@ class HueSchedulerTest {
 
         ensureRunnable(initialNow.plusDays(1), initialNow.plusDays(1).plusMinutes(20)); // next day
 
-        advanceTimeAndRunAndAssertPutCalls(scheduledRunnables.get(3),
+        advanceTimeAndRunAndAssertGroupPutCalls(scheduledRunnables.get(3),
                 expectedGroupPutCall(1).bri(150).ct(500)
         );
 
@@ -7854,7 +7868,7 @@ class HueSchedulerTest {
 
         // g1 bri:100 -> other groups: 2, 3; both are smaller; uses overlapping 5 from 3, 6 from 2, 7 from individual
 
-        advanceTimeAndRunAndAssertPutCalls(scheduledRunnables.get(0),
+        advanceTimeAndRunAndAssertGroupPutCalls(scheduledRunnables.getFirst(),
                 expectedGroupPutCall(1).bri(100)
         );
 
@@ -7868,7 +7882,7 @@ class HueSchedulerTest {
 
         // g2 bri:120 -> other groups: 1, 3; only 3 and 7 as individual are smaller
 
-        advanceTimeAndRunAndAssertPutCalls(scheduledRunnables.get(1),
+        advanceTimeAndRunAndAssertGroupPutCalls(scheduledRunnables.get(1),
                 expectedGroupPutCall(2).bri(120)
         );
 
@@ -7882,7 +7896,7 @@ class HueSchedulerTest {
 
         // g1 bri:111; second state
 
-        advanceTimeAndRunAndAssertPutCalls(scheduledRunnables.get(4),
+        advanceTimeAndRunAndAssertGroupPutCalls(scheduledRunnables.get(4),
                 expectedGroupPutCall(1).bri(111)
         );
 
@@ -7896,7 +7910,7 @@ class HueSchedulerTest {
 
         // g2 on:false; second state
 
-        advanceTimeAndRunAndAssertPutCalls(scheduledRunnables.get(5),
+        advanceTimeAndRunAndAssertGroupPutCalls(scheduledRunnables.get(5),
                 expectedGroupPutCall(2).on(false)
         );
 
@@ -7927,7 +7941,7 @@ class HueSchedulerTest {
                 expectedRunnable(now.plusMinutes(10), now.plusDays(1))
         );
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.getFirst(),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.getFirst(),
                 expectedGroupPutCall(1).bri(110)
         );
 
@@ -7958,7 +7972,7 @@ class HueSchedulerTest {
                 expectedRunnable(now.plusMinutes(10), now.plusDays(1))
         );
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.getFirst(),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.getFirst(),
                 expectedGroupPutCall(3).bri(130)
         );
 
@@ -7968,7 +7982,7 @@ class HueSchedulerTest {
 
         ensureRunnable(initialNow.plusDays(1), initialNow.plusDays(1).plusMinutes(10)); // next day
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(1),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(1),
                 expectedGroupPutCall(3).bri(230)
         );
 
@@ -8031,7 +8045,7 @@ class HueSchedulerTest {
 
         // g2
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.getFirst(),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.getFirst(),
                 expectedGroupPutCall(2).bri(120)
         );
 
@@ -8042,7 +8056,7 @@ class HueSchedulerTest {
 
         // g3
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(1),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(1),
                 expectedGroupPutCall(3).bri(130)
         );
 
@@ -8080,7 +8094,7 @@ class HueSchedulerTest {
 
         // g2: update for g1 uses both g2 and g4, while defaulting to off
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.getFirst(),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.getFirst(),
                 expectedGroupPutCall(2).bri(120)
         );
 
@@ -8096,7 +8110,7 @@ class HueSchedulerTest {
 
         // g4: update for g3 (no explicit schedule) also uses bigger parent g2 (with schedule)
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(1),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(1),
                 expectedGroupPutCall(4).bri(140)
         );
 
@@ -8143,7 +8157,7 @@ class HueSchedulerTest {
 
         // g1
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.getFirst(),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.getFirst(),
                 expectedGroupPutCall(1).bri(110)
         );
 
@@ -8158,7 +8172,7 @@ class HueSchedulerTest {
 
         // g2
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(1),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(1),
                 expectedGroupPutCall(2).bri(120)
         );
 
@@ -8173,7 +8187,7 @@ class HueSchedulerTest {
 
         // g3
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(2),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(2),
                 expectedGroupPutCall(3).bri(130)
         );
 
@@ -8509,7 +8523,7 @@ class HueSchedulerTest {
 
         // g2.1
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.getFirst(),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.getFirst(),
                 expectedGroupPutCall(2).bri(120)
         );
 
@@ -8522,7 +8536,7 @@ class HueSchedulerTest {
 
         // g3.1
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(1),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(1),
                 expectedGroupPutCall(3).on(false)
         );
         simulateLightOffEvent("/groups/3");
@@ -8539,11 +8553,11 @@ class HueSchedulerTest {
         simulateSyncedSceneActivated("/groups/1", "/lights/5", "/lights/6", "/lights/7", "/lights/8");
 
         ScheduledRunnable syncedSceneRunnable = ensureScheduledStates(expectedPowerOnEnd(initialNow.plusMinutes(10))).getFirst();
-        advanceTimeAndRunAndAssertPutCalls(syncedSceneRunnable); // no further update needed, no interpolations
+        advanceTimeAndRunAndAssertGroupPutCalls(syncedSceneRunnable); // no further update needed, no interpolations
 
         // g2.2
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(2),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(2),
                 expectedGroupPutCall(2).bri(220)
         );
 
@@ -8557,7 +8571,7 @@ class HueSchedulerTest {
         // g3.2: bug case -> synced scene activation triggers turnOn events internally; we need to still recheck off state to not apply states where the lights are off
 
         mockIsGroupOff(3, true);
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(3)); // no update, re-checks off state by api
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(3)); // no update, re-checks off state by api
 
         assertSceneUpdate("/groups/1",
                 expectedPutCall(5).bri(220), expectedPutCall(6).bri(220), expectedPutCall(7).bri(230), expectedPutCall(8).bri(230));
@@ -8732,7 +8746,7 @@ class HueSchedulerTest {
         mockSceneSyncFailure("/groups/1");
 
         // Schedule updates group normally
-        advanceTimeAndRunAndAssertPutCalls(runnables.getFirst(),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.getFirst(),
                 expectedGroupPutCall(1).bri(100)
         );
 
@@ -8767,7 +8781,7 @@ class HueSchedulerTest {
 
         mockSceneSyncFailure("/groups/2");
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.getFirst(),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.getFirst(),
                 expectedGroupPutCall(2).bri(100),
                 expectedGroupPutCall(2).bri(150).transitionTime(tr("10min"))
         );
@@ -8809,7 +8823,7 @@ class HueSchedulerTest {
                 expectedRunnable(now, now.plusDays(1))
         );
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.getFirst(),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.getFirst(),
                 expectedGroupPutCall(1).bri(100)
         );
 
@@ -9094,7 +9108,7 @@ class HueSchedulerTest {
                 expectedPowerOnEnd(now.plusMinutes(10))
         ).getFirst();
 
-        advanceTimeAndRunAndAssertPutCalls(syncedSceneRunnable); // no additional update needed, no interpolation
+        advanceTimeAndRunAndAssertGroupPutCalls(syncedSceneRunnable); // no additional update needed, no interpolation
 
         // simulate group light to be turned on physically -> keeps synced scene turn on
 
@@ -9106,13 +9120,13 @@ class HueSchedulerTest {
                 expectedPowerOnEnd(initialNow.plusMinutes(10))
         ).getFirst();
 
-        advanceTimeAndRunAndAssertPutCalls(physicalPowerOnRunnable,
+        advanceTimeAndRunAndAssertGroupPutCalls(physicalPowerOnRunnable,
                 expectedGroupPutCall(1).bri(100)
         );
 
         // still allows second state to be scheduled
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(1),
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(1),
                 expectedGroupPutCall(1).bri(110)
         );
 
@@ -9135,7 +9149,7 @@ class HueSchedulerTest {
                 expectedRunnable(now.plusMinutes(10), now.plusDays(1))
         );
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.getFirst());
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.getFirst());
 
         ensureScheduledStates(
                 expectedRunnable(now.plusDays(1), now.plusDays(1).plusMinutes(10)) // next day
@@ -9149,15 +9163,289 @@ class HueSchedulerTest {
                 expectedPowerOnEnd(initialNow.plusMinutes(10))
         ).getFirst();
 
-        advanceTimeAndRunAndAssertPutCalls(physicalPowerOnRunnable); // ignored
+        advanceTimeAndRunAndAssertGroupPutCalls(physicalPowerOnRunnable); // ignored
 
         // second state also ignored
 
-        advanceTimeAndRunAndAssertPutCalls(runnables.get(1)); // ignored
+        advanceTimeAndRunAndAssertGroupPutCalls(runnables.get(1)); // ignored
 
         ensureScheduledStates(
                 expectedRunnable(initialNow.plusDays(1).plusMinutes(10), initialNow.plusDays(2)) // next day
         );
+    }
+
+    // todo: scene can't be combined with other light state properties
+    // todo: except for brightness, which is used to scale all the brightness values present in the scene
+    // valid combinations: tr, tr-before, interpolate, force, days, bri
+
+    // todo: Fall berücksichtigen, falls es mehr als eine Szene gibt mit dem gleichen Namen innerhalb der Gruppe. Weil das durchaus der Fall sein kann.
+
+    @Test
+    void sceneControl_canBeParsed_loadsLightPropertiesBySceneForGroupByName() {
+        mockDefaultGroupCapabilities(1);
+        mockGroupLightsForId(1, 4, 5);
+        mockSceneLightStates(1, "TestScene",
+                ScheduledLightState.builder()
+                                   .id("/lights/4")
+                                   .bri(100)
+                                   .ct(20),
+                ScheduledLightState.builder()
+                                   .id("/lights/5")
+                                   .bri(50)
+                                   .ct(40));
+        addState("g1", now, "scene:TestScene");
+
+        List<ScheduledRunnable> runnables = startScheduler(
+                expectedRunnable(now, now.plusDays(1))
+        );
+
+        advanceTimeAndRunAndAssertGroupPutListCalls(runnables.getFirst(), 1,
+                expectedPutCall(4).bri(100).ct(20),
+                expectedPutCall(5).bri(50).ct(40)
+        );
+
+        ensureScheduledStates(
+                expectedRunnable(now.plusDays(1), now.plusDays(2)) // next day
+        );
+    }
+
+    @Test
+    void sceneControl_interpolateFromSimpleGroupState_correctPutCalls() {
+        mockDefaultGroupCapabilities(2);
+        mockGroupLightsForId(2, 4, 5);
+        mockSceneLightStates(2, "AnotherTestScene",
+                ScheduledLightState.builder()
+                                   .id("/lights/4")
+                                   .bri(100)
+                                   .ct(300),
+                ScheduledLightState.builder()
+                                   .id("/lights/5")
+                                   .bri(150)
+                                   .ct(400));
+        addState("g2", now, "bri:50", "ct:200");
+        addState("g2", now.plusMinutes(10), "scene:AnotherTestScene", "interpolate:true");
+
+        List<ScheduledRunnable> runnables = startScheduler(
+                expectedRunnable(now, now.plusDays(1)),
+                expectedRunnable(now.plusDays(1), now.plusDays(1)) // zero length
+        );
+
+        ScheduledRunnable runnable = runnables.getFirst();
+        setCurrentTimeTo(runnable);
+        runnable.run();
+
+        assertGroupPutCalls(
+                expectedGroupPutCall(2).bri(50).ct(200)
+        );
+
+        assertGroupPutListCalls(2,
+                expectedPutCall(4).bri(100).ct(300).transitionTime(tr("10min")),
+                expectedPutCall(5).bri(150).ct(400).transitionTime(tr("10min"))
+        );
+        assertAllGroupPutListCallsAsserted();
+
+        ensureScheduledStates(
+                expectedRunnable(now.plusDays(1), now.plusDays(2)) // next day
+        );
+
+        // after 5 minutes power on -> interplates from simple group state to multiple put calls
+
+        advanceCurrentTime(Duration.ofMinutes(5));
+
+        List<ScheduledRunnable> powerOnRunnables = simulateLightOnEvent("/groups/2",
+                expectedPowerOnEnd(initialNow.plusDays(1))
+        );
+
+        powerOnRunnables.getFirst().run();
+
+        assertGroupPutListCalls(2,
+                expectedPutCall(4).bri(75).ct(250),  // interpolated
+                expectedPutCall(5).bri(100).ct(300)  // interpolated
+        );
+        assertGroupPutListCalls(2,
+                expectedPutCall(4).bri(100).ct(300).transitionTime(tr("5min")),
+                expectedPutCall(5).bri(150).ct(400).transitionTime(tr("5min"))
+        );
+
+        assertAllGroupPutListCallsAsserted();
+    }
+
+    @Test
+    void sceneControl_interpolateFromSceneGroupStateToSimple_correctPutCalls() {
+        mockDefaultGroupCapabilities(2);
+        mockGroupLightsForId(2, 4, 5);
+        mockSceneLightStates(2, "TestScene",
+                ScheduledLightState.builder()
+                                   .id("/lights/4")
+                                   .bri(100)
+                                   .ct(300),
+                ScheduledLightState.builder()
+                                   .id("/lights/5")
+                                   .bri(150)
+                                   .ct(400));
+        addState("g2", now, "scene:TestScene");
+        addState("g2", now.plusMinutes(10), "bri:50", "ct:200", "interpolate:true");
+
+        List<ScheduledRunnable> runnables = startScheduler(
+                expectedRunnable(now, now.plusDays(1)),
+                expectedRunnable(now.plusDays(1), now.plusDays(1)) // zero length
+        );
+
+        ScheduledRunnable runnable = runnables.getFirst();
+        setCurrentTimeTo(runnable);
+        runnable.run();
+
+        // previous state
+        assertGroupPutListCalls(2,
+                expectedPutCall(4).bri(100).ct(300),
+                expectedPutCall(5).bri(150).ct(400)
+        );
+
+        assertGroupPutCalls(
+                expectedGroupPutCall(2).bri(50).ct(200).transitionTime(tr("10min"))
+        );
+
+        ensureScheduledStates(
+                expectedRunnable(now.plusDays(1), now.plusDays(2)) // next day
+        );
+
+        // after 5 minutes power on -> interplates from scene group state
+
+        advanceCurrentTime(Duration.ofMinutes(5));
+
+        List<ScheduledRunnable> powerOnRunnables = simulateLightOnEvent("/groups/2",
+                expectedPowerOnEnd(initialNow.plusDays(1))
+        );
+
+        powerOnRunnables.getFirst().run();
+
+        assertGroupPutListCalls(2,
+                expectedPutCall(4).bri(75).ct(250),  // interpolated
+                expectedPutCall(5).bri(100).ct(300)  // interpolated
+        );
+        assertGroupPutCalls(
+                expectedGroupPutCall(2).bri(50).ct(200).transitionTime(tr("5min"))
+        );
+
+        assertAllGroupPutListCallsAsserted();
+    }
+
+    @Test
+    void sceneControl_interpolateFromSceneGroupStateToAnotherSceneGroupState_correctPutCalls() {
+        mockDefaultGroupCapabilities(2);
+        mockGroupLightsForId(2, 4, 5);
+        mockSceneLightStates(2, "TestScene",
+                ScheduledLightState.builder()
+                                   .id("/lights/4")
+                                   .bri(100)
+                                   .ct(300),
+                ScheduledLightState.builder()
+                                   .id("/lights/5")
+                                   .bri(150)
+                                   .ct(400));
+        mockSceneLightStates(2, "AnotherTestScene",
+                ScheduledLightState.builder()
+                                   .id("/lights/4")
+                                   .bri(200)
+                                   .ct(400),
+                ScheduledLightState.builder()
+                                   .id("/lights/5")
+                                   .bri(250)
+                                   .ct(500));
+        addState("g2", now, "scene:TestScene");
+        addState("g2", now.plusMinutes(10), "scene:AnotherTestScene", "interpolate:true");
+
+        List<ScheduledRunnable> runnables = startScheduler(
+                expectedRunnable(now, now.plusDays(1)),
+                expectedRunnable(now.plusDays(1), now.plusDays(1)) // zero length
+        );
+
+        ScheduledRunnable runnable = runnables.getFirst();
+        setCurrentTimeTo(runnable);
+        runnable.run();
+
+        assertGroupPutListCalls(2,
+                expectedPutCall(4).bri(100).ct(300),
+                expectedPutCall(5).bri(150).ct(400)
+        );
+
+        assertGroupPutListCalls(2,
+                expectedPutCall(4).bri(200).ct(400).transitionTime(tr("10min")),
+                expectedPutCall(5).bri(250).ct(500).transitionTime(tr("10min"))
+        );
+
+        ensureScheduledStates(
+                expectedRunnable(now.plusDays(1), now.plusDays(2)) // next day
+        );
+
+        // after 5 minutes power on -> interplates from scene group state
+
+        advanceCurrentTime(Duration.ofMinutes(5));
+
+        List<ScheduledRunnable> powerOnRunnables = simulateLightOnEvent("/groups/2",
+                expectedPowerOnEnd(initialNow.plusDays(1))
+        );
+
+        powerOnRunnables.getFirst().run();
+
+        assertGroupPutListCalls(2,
+                expectedPutCall(4).bri(150).ct(350),  // interpolated
+                expectedPutCall(5).bri(200).ct(450)  // interpolated
+        );
+        assertGroupPutListCalls(2,
+                expectedPutCall(4).bri(200).ct(400).transitionTime(tr("5min")),
+                expectedPutCall(5).bri(250).ct(500).transitionTime(tr("5min"))
+        );
+
+        assertAllGroupPutListCallsAsserted();
+    }
+
+    private void mockSceneLightStates(int groupId, String sceneName, ScheduledLightState.ScheduledLightStateBuilder... builder) {
+        List<ScheduledLightState> states = Arrays.stream(builder)
+                                                 .map(ScheduledLightState.ScheduledLightStateBuilder::build)
+                                                 .toList();
+        when(mockedHueApi.getSceneLightState("/groups/" + groupId, sceneName)).thenReturn(states);
+    }
+
+    private void advanceTimeAndRunAndAssertGroupPutListCalls(ScheduledRunnable runnable, int groupId,
+                                                             PutCall.PutCallBuilder... putCallBuilders) {
+        setCurrentTimeTo(runnable);
+
+        runnable.run();
+
+        assertGroupPutListCalls(groupId, putCallBuilders);
+
+        assertAllGroupPutListCallsAsserted();
+    }
+
+    private void assertGroupPutListCalls(int groupId, PutCall.PutCallBuilder... putCallBuilders) {
+        List<PutCall> putCalls = Arrays.stream(putCallBuilders)
+                                       .map(PutCall.PutCallBuilder::build)
+                                       .toList();
+        String groupIdString = "/groups/" + groupId;
+        expectedGroupPutListCalls++;
+        orderVerifier.verify(mockedHueApi, calls(1)).putGroupState(groupIdString, putCalls);
+    }
+
+    private void advanceTimeAndRunAndAssertGroupPutCalls(ScheduledRunnable runnable, PutCall.PutCallBuilder... putCallBuilders) {
+        setCurrentTimeTo(runnable);
+
+        runAndAssertGroupPutCalls(runnable, putCallBuilders);
+    }
+
+    private void runAndAssertGroupPutCalls(ScheduledRunnable runnable, PutCall.PutCallBuilder... putCallBuilders) {
+        runnable.run();
+
+        assertGroupPutCalls(putCallBuilders);
+    }
+
+    private void assertGroupPutCalls(PutCall.PutCallBuilder... putCallBuilders) {
+        for (PutCall.PutCallBuilder putCallBuilder : putCallBuilders) {
+            expectedGroupPutCalls++;
+            orderVerifier.verify(mockedHueApi, calls(1)).putGroupState(putCallBuilder.build());
+        }
+
+        assertAllGroupPutCallsAsserted();
     }
 
     private void simulateSceneActivated(String groupId, String... containedLights) {
@@ -9191,7 +9479,7 @@ class HueSchedulerTest {
     }
 
     private static PutCall.PutCallBuilder expectedGroupPutCall(int id) {
-        return expectedPutCall("/groups/" + id).groupState(true);
+        return expectedPutCall("/groups/" + id);
     }
 
     private static PutCall.PutCallBuilder expectedPutCall(int id) {
